# model-checker

./: Cargo.toml  Readme.md  index.html  model_checker_ui-37a2697a29962e4b.js  model_checker_ui-37a2697a29962e4b_bg.wasm  model_checker_ui-407261acd7460959.js  model_checker_ui-407261acd7460959_bg.wasm  sw.js
.github/workflows/: pages.yml
lib/: Cargo.toml
lib/src/: buechi.rs  kripke.rs  lib.rs  model_checking_error.rs  parsing.rs
lib/src/buechi/: ltl_to_buechi.rs  product.rs  transitions.rs
lib/src/parsing/: lexer.rs  parser.rs  parsing_error.rs
lib/tests/: test.rs
src/: buechi.rs  main.rs  parsing.rs
src/buechi/: ltl_to_buechi.rs  transitions.rs
src/parsing/: lexer.rs  parser.rs  parsing_error.rs
