[package]
name = "model_checker_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model_checker = { path = "lib" }

eframe = { version="0.27", features = [
    "default",
] }
egui_extras = { version="0.27" }
log = "0.4"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
eframe = { git = "https://github.com/justusdieckmann/egui", branch = "web-support-zoom-factor" }
egui = { git = "https://github.com/justusdieckmann/egui", branch = "web-support-zoom-factor" }